--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p class="second-cont-p">Our projects integrate leading-edge technologies
             like Virtual Reality, Augmented Reality, Projection Mapping, AI
             & Interactive Environments to create memorable immersive
-            experiences
+            experience
           </p>
         </div>
       </div>
