mob design and D3

--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
         </div>
       </div>
     </div>
+
+    <div class="third-cont"  uk-scrollspy="cls: uk-animation-slide-right; target: .third-cont-flex; delay: 300; repeat: true">
+      <div class="third-cont-flex">
+        <div class="third-cont-top">
+          <span class="top-cont-inner-span1" style="font-size: 40px; font-weight: 600;">Strategy & Experience</span>
+          <span class="top-cont-inner-span2" style="font-size: 40px; font-weight: 600;">Design Team</span>
+        </div>
+        <div class="third-cont-middle">
+          <p>Transforming a brief into an experience/creative strategy then into
+            a developed concept
+          </p>
+          <p style="margin-top: -5px;">
+            Output: Meta-narrative, themes, sub-themes, storylines, take-home messages
+            for content interpretation
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!--<main>
