--- a/index.html
+++ b/index.html
@@ -168,12 +168,31 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat consequatur
           fugiat nobis esse ullam ex tempora minima</p>
       </div>
+    </div>
 
-
+    <div class="sixth-cont"  uk-scrollspy="cls: uk-animation-fade; target: .sixth-cont-upper; delay: 300; repeat: true">
+      <div class="sixth-cont-upper">
+        <p class="sixth-cont-upper-header">Us</p>
+        <p class="sixth-cont-upper-nonheader">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus eos ducimus cumque molestias explicabo,</p>
+      </div>
+      <div class="sixth-cont-middle">
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+        <img src="assets/portfolio.jpg" />
+      </div>
     </div>
   </div>
 
- 
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
