--- a/index.html
+++ b/index.html
@@ -170,10 +170,11 @@
       </div>
     </div>
 
-    <div class="sixth-cont"  uk-scrollspy="cls: uk-animation-fade; target: .sixth-cont-upper; delay: 300; repeat: true">
+    <div class="sixth-cont" uk-scrollspy="cls: uk-animation-fade; target: .sixth-cont-upper; delay: 300; repeat: true">
       <div class="sixth-cont-upper">
         <p class="sixth-cont-upper-header">Us</p>
-        <p class="sixth-cont-upper-nonheader">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus eos ducimus cumque molestias explicabo,</p>
+        <p class="sixth-cont-upper-nonheader">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus eos
+          ducimus cumque molestias explicabo,</p>
       </div>
       <div class="sixth-cont-middle">
         <img src="assets/portfolio.jpg" />
@@ -188,6 +189,19 @@
         <img src="assets/portfolio.jpg" />
         <img src="assets/portfolio.jpg" />
         <img src="assets/portfolio.jpg" />
+      </div>
+    </div>
+
+    <div class="seventh-cont" uk-scrollspy="cls: uk-animation-slide-right; target: .seventh-cont-flex; delay: 300; repeat: true">
+      <div class="seventh-cont-flex">
+        <div class="seventh-cont-spans">
+          <span class="seventh-cont-spans1">The</span>
+          <span class="seventh-cont-spans2">Lab</span>
+        </div>
+        <div class="seventh-cont-middle">
+          <span class="s1">The </span><span class="s2">BE Lab </span><span class="s3">functions as a resource for boot camp 
+            & workshops</span>
+        </div>
       </div>
     </div>
   </div>
