--- a/index.html
+++ b/index.html
@@ -204,6 +204,34 @@
         </div>
       </div>
     </div>
+
+    <!--footer-->
+
+    <div class="eight-cont-footer">
+      <div class="footer-left">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2799160891!2d-74.25987584510595!3d40.69767006338158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1627636688411!5m2!1sen!2s" 
+             style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <div class="footer-right">
+        <div class="footer-right-top">
+          <div class="footer-icontext">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>XYZ street, 23456 Region city</p>
+          </div>
+          <div class="footer-icontext">
+            <i class="fas fa-phone-alt"></i>
+            <p> +(888) 957 457</p>
+          </div>
+          <div class="footer-icontext">
+            <i class="fas fa-envelope"></i>
+            <p>info@backyardcs.com</p>
+          </div>
+        </div>
+        <div class="footer-right-bottom">
+          <p>Copyright @2021 Backyard Experiential. All rights reserved
+        </div>
+      </div>
+    </div>
   </div>
 
 
