--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 
   <canvas id="bg"></canvas>
 
-
+  <!--Only for the cursor-->
+  <div class="cursor"></div>
   <div class="main" uk-scrollspy="cls: uk-animation-fade; target: .top-cont; delay: 500; repeat: true">
+
+    
 
 
     <div class="main-header">
@@ -37,8 +40,8 @@
 
     <div class="top-cont">
       <div class="top-cont-inner">
-        <span class="top-cont-inner-span1">We Create Dream-</span>
-        <span class="top-cont-inner-span2">like Experiences.</span>
+        <span class="top-cont-inner-span1 white">We Create Dream-</span>
+        <span class="top-cont-inner-span2 orange">like Experiences.</span>
       </div>
       <div class="top-cont-inner2">
         <p class="top-cont-inner2-p">Content that makes noise. Everlasting memories</p>
@@ -55,8 +58,8 @@
       uk-scrollspy="cls: uk-animation-slide-bottom; target: .second-cont-left; delay: 300; repeat: true">
       <div class="second-cont-left">
         <div class="second-cont-left-spans">
-          <span class="top-cont-inner-span1" style="font-size: 52px; font-weight: 600;">We Design &</span>
-          <span class="top-cont-inner-span2" style="font-size: 52px; font-weight: 600;">Deliver</span>
+          <span class="top-cont-inner-span1 white" style="font-size: 52px; font-weight: 600;">We Design &</span>
+          <span class="top-cont-inner-span2 orange" style="font-size: 52px; font-weight: 600;">Deliver</span>
         </div>
         <div class="second-cont-p-cont">
           <p class="second-cont-p">Our projects integrate leading-edge technologies
@@ -93,8 +96,8 @@
       uk-scrollspy="cls: uk-animation-slide-right; target: .third-cont-flex; delay: 300; repeat: true">
       <div class="third-cont-flex">
         <div class="third-cont-top">
-          <span class="top-cont-inner-span1" style="font-size: 40px; font-weight: 600;">Strategy & Experience</span>
-          <span class="top-cont-inner-span2" style="font-size: 40px; font-weight: 600;">Design Team</span>
+          <span class="top-cont-inner-span1 white" style="font-size: 40px; font-weight: 600;">Strategy & Experience</span>
+          <span class="top-cont-inner-span2 orange" style="font-size: 40px; font-weight: 600;">Design Team</span>
         </div>
         <div class="third-cont-middle">
           <p>Transforming a brief into an experience/creative strategy then into
@@ -112,8 +115,8 @@
       uk-scrollspy="cls: uk-animation-slide-left; target: .fourth-cont-inner; delay: 300; repeat: true">
       <div class="fourth-cont-inner">
         <div class="fourth-cont-inner-top">
-          <span class="top-cont-inner-span1" style="font-size: 46px; font-weight: 600;">Work We</span>
-          <span class="top-cont-inner-span2" style="font-size: 46px; font-weight: 600;"> Celebrate</span>
+          <span class="top-cont-inner-span1 white" style="font-size: 46px; font-weight: 600;">Work We</span>
+          <span class="top-cont-inner-span2 orange" style="font-size: 46px; font-weight: 600;"> Celebrate</span>
         </div>
         <div class="fourth-cont-inner-middle">
           <p>Our projects span across different sectors, destinations and technology
@@ -172,7 +175,7 @@
 
     <div class="sixth-cont" uk-scrollspy="cls: uk-animation-fade; target: .sixth-cont-upper; delay: 300; repeat: true">
       <div class="sixth-cont-upper">
-        <p class="sixth-cont-upper-header">Us</p>
+        <p class="sixth-cont-upper-header white">Us</p>
         <p class="sixth-cont-upper-nonheader">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus eos
           ducimus cumque molestias explicabo,</p>
       </div>
@@ -195,8 +198,8 @@
     <div class="seventh-cont" uk-scrollspy="cls: uk-animation-slide-right; target: .seventh-cont-flex; delay: 300; repeat: true">
       <div class="seventh-cont-flex">
         <div class="seventh-cont-spans">
-          <span class="seventh-cont-spans1">The</span>
-          <span class="seventh-cont-spans2">Lab</span>
+          <span class="seventh-cont-spans1 white">The</span>
+          <span class="seventh-cont-spans2 orange">Lab</span>
         </div>
         <div class="seventh-cont-middle">
           <span class="s1">The </span><span class="s2">BE Lab </span><span class="s3">functions as a resource for boot camp 
@@ -239,14 +242,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/js/uikit.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/js/uikit-icons.min.js"></script>
+
   <!-- <script type="module" src="/main.js"></script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
     integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js" ></script>  
+  <script src="customjs/obj.js"></script>
+  <script src="customjs/mtl.js"></script>
+  <script type="text/javascript" src="cursor.js"></script>
   <script type="module" type="text/javascript" src="script.js"></script>
 
   <script type="text/javascript">
