--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
     <img src="./assets/Polygon.png"/>
   </div>
 
+ <!--
+   <div class="absolute-test">
+    <img src="./assets/design.jpg"/>
+  </div> 
+ -->  
+
     <div class="top-cont">
       <div class="top-cont-inner">
         <span class="top-cont-inner-span1 white">We Create Dream-</span>
